# percolation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  percolation.py  visualization.py
tests/: test_functions.ipynb
